k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nodejs-app
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nodejs-app

  template:
    metadata:
      labels:
        app: nodejs-app

    spec:
      containers:
      - name: nodejs-app
        image: 728980333971.dkr.ecr.ap-south-1.amazonaws.com/nodejs-app:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "200m"
